--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "node-forge": "^0.10.0",
-    "parcel": "^2.0.0-beta",
+    "parcel": "^2.0.0-beta.1",
     "parcel-bundler": "^1.3.1"
   }
 }
